--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sports GifTastic!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Sigmar+One|Special+Elite" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="assets/images/sport-icons.jpg"/>
 </head>
@@ -22,7 +22,7 @@
             </div>
             <div class="col-md-3">
                 <form id="sport-form">
-                    <label for="sport-input">Add a Sport:</label>
+                    <label for="sport-input">Add Sport Type:</label>
                     <input type="text" id="sport-input">
                     <input id="addSport" type="submit" value="submit">
                 </form>
@@ -35,6 +35,9 @@
             </div>
         </div>
 	</div>
+
+	<!-- Bootstrap footer fixed for copyright on the bottom -->
+
     <footer class="mt-5 text-center fixed-bottom">
 
 			<div class="absolute-top pt-1 mt-5 bg-info">
@@ -45,14 +48,17 @@
 			  </nav>
 		  
 		</footer>
+
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+  	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
   <!-- Added link to Javascript-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js">
-  </script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+
+  	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+  	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
 </html>
